--- a/magasin/templates/magasin/uc2_stock.html
+++ b/magasin/templates/magasin/uc2_stock.html
@@ -43,7 +43,7 @@
           <input type="number" name="quantite" min="1" max="{{ stock.quantite }}" placeholder="Quantité" required>
         </td>
         <td style="border: 1px solid #dee2e6; padding: 10px;">
-          <input type="hidden" name="produit_id" value="{{ stock.produit.id }}">
+          <input type="hidden" name="produit_id" value="{{ stock.produit_id }}">
           <button type="submit">Créer la demande</button>
         </td>
       </form>
